reading in pie crab data

--- a/workshop9-collab.qmd
+++ b/workshop9-collab.qmd
@@ -12,3 +12,17 @@ library(ggeffects) # for models
 library(here) # for easy file pathing
 ```
 
+reading in data:
+
+```{r}
+data(pie_crab) # reading in plum island ecosystem crab data set from lterdatasampler package
+```
+
+
+
+
+
+
+
+
+
