--- a/workshop9-collab.qmd
+++ b/workshop9-collab.qmd
@@ -27,6 +27,16 @@ ggplot(aes(x= latitude, y = size), data= pie_crab) + # set up plot
   theme_minimal() # remove gridlines by updating theme
 ```
 
+writing a model
+
+```{r}
+crab_model <- lm(size ~ latitude, # formula: response ~ predictor
+                 data = pie_crab) # data from lter data sampler
+
+# look at diagnostics here
+par(mfrow = c(2, 2)) # plot the diagnostic plots in a 2x2 grid
+plot(crab_model) # plotting the diagnostics
+```
 
 
 
