--- a/workshop9-collab.qmd
+++ b/workshop9-collab.qmd
@@ -38,7 +38,18 @@ par(mfrow = c(2, 2)) # plot the diagnostic plots in a 2x2 grid
 plot(crab_model) # plotting the diagnostics
 ```
 
+interpret model!
 
+```{r}
+summary(crab_model) #look at results
+```
+
+Slope: 0.49 +/- 0.034
+Y intercept: -3.6 +/- 1.27
+
+For every one unti increase in latitude, we expect to see an increase in crab size of 0.49 +/- 0.034 mm.
+
+model statistics: F(1,390) = 208.5, p < 0.0001, alpha = 0.05, R^2^ = 0.35
 
 
 
